[package]
name = "hl7-mllp-codec"
description = "A Tokio codec for HL7 Minimal Lower Layer Message Transport protocol (MLLP)"
version = "0.0.6"
authors = ["wokket <wokket@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/wokket/hl7-mllp-codec"
documentation = "https://docs.rs/hl7-mllp-codec"
categories = ["asynchronous", "network-programming"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = [
    "src/*.rs",
    "Cargo.toml",
]

# [profile.release]
# debug = true # Flamegraph love

[dependencies]
bytes = "0.5"

tokio-util = {version="0.2", features=["codec"]}
log = "0.4"

[dev-dependencies]
tokio = {version="0.2", features=["full"]}
futures = "0.3"
