[package]
name = "hl7-mllp-codec"
description = "A Tokio codec for HL7 Minimal Lower Layer Message Transport protocol (MLLP)"
version = "0.1.0"
authors = ["wokket <wokket@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/wokket/hl7-mllp-codec"
documentation = "https://docs.rs/hl7-mllp-codec"
categories = ["asynchronous", "network-programming"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = [
    "src/*.rs",
    "Cargo.toml",
]

# [profile.release]
# debug = true # Flamegraph love

[dependencies]
bytes = "1"
tokio-util = {version="0.6.7", features=["codec"]}
log = "0.4"

[dev-dependencies]
criterion = "0.3"
futures = "0.3"
tokio = {version="1.9.0", features=["full"]}

[[bench]]
name = "benchmarks"
harness = false
path = "benches/benchmarks.rs"
